--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@ body.dark .intro-screen {
               <!-- LinkedIn SVG -->
               <svg width="16" height="16" viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M4.98 3.5a2.5 2.5 0 11-.001 5.001A2.5 2.5 0 014.98 3.5zM3 9h4v12H3zM9 9h3.8v1.6h.1c.5-.95 1.72-1.95 3.54-1.95C20.2 8.65 21 10.6 21 13.6V21h-4v-6.2c0-1.5-.03-3.45-2.1-3.45-2.1 0-2.42 1.64-2.42 3.35V21H9z" fill="#fff"/></svg>
             </a>
-            <a class="social-btn" href="#" target="_blank" aria-label="Sumit GitHub" title="GitHub">
+            <a class="social-btn" href="https://www.instagram.com/sonisumit06?igsh=aWk3ZHZ5czEzbngw" target="_blank" aria-label="Sumit Instagram" title="Instagram">
               <!-- GitHub SVG -->
               <svg width="16" height="16" viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M12 2C7 2 4 6 4 10c0 4 3 7 8 7 5 0 8-3 8-7 0-4-3-8-8-8z" fill="#fff"/></svg>
             </a>
@@ -449,7 +449,7 @@ body.dark .intro-screen {
           <h3>Saad Ansari</h3><p>App Developer</p>
           <div class="socials">
             <a class="social-btn" href="#" aria-label="Saad LinkedIn" title="LinkedIn"><svg width="16" height="16" viewBox="0 0 24 24" fill="none"><path d="M4.98 3.5a2.5 2.5 0 11-.001 5.001A2.5 2.5 0 014.98 3.5zM3 9h4v12H3zM9 9h3.8v1.6h.1c.5-.95 1.72-1.95 3.54-1.95C20.2 8.65 21 10.6 21 13.6V21h-4v-6.2c0-1.5-.03-3.45-2.1-3.45-2.1 0-2.42 1.64-2.42 3.35V21H9z" fill="#fff"/></svg></a>
-            <a class="social-btn" href="#" aria-label="Saad GitHub" title="GitHub"><svg width="16" height="16" viewBox="0 0 24 24" fill="none"><path d="M12 2C7 2 4 6 4 10c0 4 3 7 8 7 5 0 8-3 8-7 0-4-3-8-8-8z" fill="#fff"/></svg></a>
+            <a class="social-btn" href="https://www.instagram.com/no.1_inocnt_boy_?igsh=bGJrb3FkaHJjMGU4" aria-label="Saad Instagram" title="Instagram"><svg width="16" height="16" viewBox="0 0 24 24" fill="none"><path d="M12 2C7 2 4 6 4 10c0 4 3 7 8 7 5 0 8-3 8-7 0-4-3-8-8-8z" fill="#fff"/></svg></a>
           </div>
         </div>
 
@@ -458,7 +458,7 @@ body.dark .intro-screen {
           <h3>Farhan Ansari</h3><p>Web Developer</p>
           <div class="socials">
             <a class="social-btn" href="https://www.linkedin.com/in/farhan-ali-ansari-725ab438a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" aria-label="Farhan LinkedIn" title="LinkedIn"><svg width="16" height="16" viewBox="0 0 24 24" fill="none"><path d="M4.98 3.5a2.5 2.5 0 11-.001 5.001A2.5 2.5 0 014.98 3.5zM3 9h4v12H3zM9 9h3.8v1.6h.1c.5-.95 1.72-1.95 3.54-1.95C20.2 8.65 21 10.6 21 13.6V21h-4v-6.2c0-1.5-.03-3.45-2.1-3.45-2.1 0-2.42 1.64-2.42 3.35V21H9z" fill="#fff"/></svg></a>
-            <a class="social-btn" href="#" aria-label="Farhan GitHub" title="GitHub"><svg width="16" height="16" viewBox="0 0 24 24" fill="none"><path d="M12 2C7 2 4 6 4 10c0 4 3 7 8 7 5 0 8-3 8-7 0-4-3-8-8-8z" fill="#fff"/></svg></a>
+            <a class="social-btn" href="https://www.instagram.com/farhan__7486?igsh=MTZwajAzc2txY2h5OA==" aria-label="Farhan Instagram" title="Instagram"><svg width="16" height="16" viewBox="0 0 24 24" fill="none"><path d="M12 2C7 2 4 6 4 10c0 4 3 7 8 7 5 0 8-3 8-7 0-4-3-8-8-8z" fill="#fff"/></svg></a>
           </div>
         </div>
 
@@ -467,7 +467,7 @@ body.dark .intro-screen {
           <h3>Jayesh Kumar Dewangan</h3><p>Web Developer</p>
           <div class="socials">
             <a class="social-btn" href="https://www.linkedin.com/in/jayesh-kumar-dewangan-71a9672bb?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" aria-label="Jayesh LinkedIn" title="LinkedIn"><svg width="16" height="16" viewBox="0 0 24 24" fill="none"><path d="M4.98 3.5a2.5 2.5 0 11-.001 5.001A2.5 2.5 0 014.98 3.5zM3 9h4v12H3zM9 9h3.8v1.6h.1c.5-.95 1.72-1.95 3.54-1.95C20.2 8.65 21 10.6 21 13.6V21h-4v-6.2c0-1.5-.03-3.45-2.1-3.45-2.1 0-2.42 1.64-2.42 3.35V21H9z" fill="#fff"/></svg></a>
-            <a class="social-btn" href="#" aria-label="Jayesh GitHub" title="GitHub"><svg width="16" height="16" viewBox="0 0 24 24" fill="none"><path d="M12 2C7 2 4 6 4 10c0 4 3 7 8 7 5 0 8-3 8-7 0-4-3-8-8-8z" fill="#fff"/></svg></a>
+            <a class="social-btn" href="https://www.instagram.com/its_jkd_here?igsh=MWFjMmN2NmZjcW52ZA==" aria-label="Jayesh Instagram" title="Instagram"><svg width="16" height="16" viewBox="0 0 24 24" fill="none"><path d="M12 2C7 2 4 6 4 10c0 4 3 7 8 7 5 0 8-3 8-7 0-4-3-8-8-8z" fill="#fff"/></svg></a>
           </div>
         </div>
 
@@ -476,7 +476,7 @@ body.dark .intro-screen {
           <h3>Ansh Chandravanshi</h3><p>Support Member</p>
           <div class="socials">
             <a class="social-btn" href="https://www.linkedin.com/in/ansh-c-87371b2a2?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" aria-label="Ansh LinkedIn" title="LinkedIn"><svg width="16" height="16" viewBox="0 0 24 24" fill="none"><path d="M4.98 3.5a2.5 2.5 0 11-.001 5.001A2.5 2.5 0 014.98 3.5zM3 9h4v12H3zM9 9h3.8v1.6h.1c.5-.95 1.72-1.95 3.54-1.95C20.2 8.65 21 10.6 21 13.6V21h-4v-6.2c0-1.5-.03-3.45-2.1-3.45-2.1 0-2.42 1.64-2.42 3.35V21H9z" fill="#fff"/></svg></a>
-            <a class="social-btn" href="#" aria-label="Ansh GitHub" title="GitHub"><svg width="16" height="16" viewBox="0 0 24 24" fill="none"><path d="M12 2C7 2 4 6 4 10c0 4 3 7 8 7 5 0 8-3 8-7 0-4-3-8-8-8z" fill="#fff"/></svg></a>
+            <a class="social-btn" href="#" aria-label="Ansh Instagram" title="Instagram"><svg width="16" height="16" viewBox="0 0 24 24" fill="none"><path d="M12 2C7 2 4 6 4 10c0 4 3 7 8 7 5 0 8-3 8-7 0-4-3-8-8-8z" fill="#fff"/></svg></a>
           </div>
         </div>
       </div>
@@ -659,3 +659,4 @@ particlesJS("particles-js", {
 
 </body>
 </html>
+
