--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@ body.dark .intro-screen {
           <h3>Ansh Chandravanshi</h3><p>Support Member</p>
           <div class="socials">
             <a class="social-btn" href="https://www.linkedin.com/in/ansh-c-87371b2a2?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" aria-label="Ansh LinkedIn" title="LinkedIn"><svg width="16" height="16" viewBox="0 0 24 24" fill="none"><path d="M4.98 3.5a2.5 2.5 0 11-.001 5.001A2.5 2.5 0 014.98 3.5zM3 9h4v12H3zM9 9h3.8v1.6h.1c.5-.95 1.72-1.95 3.54-1.95C20.2 8.65 21 10.6 21 13.6V21h-4v-6.2c0-1.5-.03-3.45-2.1-3.45-2.1 0-2.42 1.64-2.42 3.35V21H9z" fill="#fff"/></svg></a>
-            <a class="social-btn" href="#" aria-label="Ansh Instagram" title="Instagram"><svg width="16" height="16" viewBox="0 0 24 24" fill="none"><path d="M12 2C7 2 4 6 4 10c0 4 3 7 8 7 5 0 8-3 8-7 0-4-3-8-8-8z" fill="#fff"/></svg></a>
+            <a class="social-btn" href="https://www.instagram.com/_enoughanshh_?igsh=aWVvdTVkejluMG42" aria-label="Ansh Instagram" title="Instagram"><svg width="16" height="16" viewBox="0 0 24 24" fill="none"><path d="M12 2C7 2 4 6 4 10c0 4 3 7 8 7 5 0 8-3 8-7 0-4-3-8-8-8z" fill="#fff"/></svg></a>
           </div>
         </div>
       </div>
@@ -659,4 +659,5 @@ particlesJS("particles-js", {
 
 </body>
 </html>
+
 
