--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@ body.dark .intro-screen {
       <div class="team" role="list">
         <!-- member 1 -->
         <div class="member" role="listitem" tabindex="0">
-          <h3>Sumit D. Soni</h3><p>App Developer</p>
+          <h3>Sumit D. Soni</h3><p>Developer</p>
           <div class="socials">
             <a class="social-btn" href="https://www.linkedin.com/in/sumit-soni-554776306?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" aria-label="Sumit LinkedIn" title="LinkedIn">
               <!-- LinkedIn SVG -->
@@ -503,7 +503,7 @@ body.dark .intro-screen {
 
         <!-- member 2 -->
         <div class="member" role="listitem" tabindex="0">
-          <h3>Saad Ansari</h3><p>App Developer</p>
+          <h3>Saad Ansari</h3><p>Developer</p>
           <div class="socials">
             <a class="social-btn" href="#" aria-label="Saad LinkedIn" title="LinkedIn"><svg width="16" height="16" viewBox="0 0 24 24" fill="none"><path d="M4.98 3.5a2.5 2.5 0 11-.001 5.001A2.5 2.5 0 014.98 3.5zM3 9h4v12H3zM9 9h3.8v1.6h.1c.5-.95 1.72-1.95 3.54-1.95C20.2 8.65 21 10.6 21 13.6V21h-4v-6.2c0-1.5-.03-3.45-2.1-3.45-2.1 0-2.42 1.64-2.42 3.35V21H9z" fill="#fff"/></svg></a>
             <a class="social-btn" href="https://www.instagram.com/no.1_inocnt_boy_?igsh=bGJrb3FkaHJjMGU4" aria-label="Saad Instagram" title="Instagram"><svg width="16" height="16" viewBox="0 0 24 24" fill="none"><path d="M12 2C7 2 4 6 4 10c0 4 3 7 8 7 5 0 8-3 8-7 0-4-3-8-8-8z" fill="#fff"/></svg></a>
@@ -512,7 +512,7 @@ body.dark .intro-screen {
 
         <!-- member 3 -->
         <div class="member" role="listitem" tabindex="0">
-          <h3>Farhan Ansari</h3><p>Web Developer</p>
+          <h3>Farhan Ansari</h3><p>Feedback Form & Documentation</p>
           <div class="socials">
             <a class="social-btn" href="https://www.linkedin.com/in/farhan-ali-ansari-725ab438a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" aria-label="Farhan LinkedIn" title="LinkedIn"><svg width="16" height="16" viewBox="0 0 24 24" fill="none"><path d="M4.98 3.5a2.5 2.5 0 11-.001 5.001A2.5 2.5 0 014.98 3.5zM3 9h4v12H3zM9 9h3.8v1.6h.1c.5-.95 1.72-1.95 3.54-1.95C20.2 8.65 21 10.6 21 13.6V21h-4v-6.2c0-1.5-.03-3.45-2.1-3.45-2.1 0-2.42 1.64-2.42 3.35V21H9z" fill="#fff"/></svg></a>
             <a class="social-btn" href="https://www.instagram.com/farhan__7486?igsh=MTZwajAzc2txY2h5OA==" aria-label="Farhan Instagram" title="Instagram"><svg width="16" height="16" viewBox="0 0 24 24" fill="none"><path d="M12 2C7 2 4 6 4 10c0 4 3 7 8 7 5 0 8-3 8-7 0-4-3-8-8-8z" fill="#fff"/></svg></a>
@@ -521,7 +521,7 @@ body.dark .intro-screen {
 
         <!-- member 4 -->
         <div class="member" role="listitem" tabindex="0">
-          <h3>Jayesh Kumar Dewangan</h3><p>Web Developer</p>
+          <h3>Jayesh Kumar Dewangan</h3><p>Feedback Form & Documentation</p>
           <div class="socials">
             <a class="social-btn" href="https://www.linkedin.com/in/jayesh-kumar-dewangan-71a9672bb?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" aria-label="Jayesh LinkedIn" title="LinkedIn"><svg width="16" height="16" viewBox="0 0 24 24" fill="none"><path d="M4.98 3.5a2.5 2.5 0 11-.001 5.001A2.5 2.5 0 014.98 3.5zM3 9h4v12H3zM9 9h3.8v1.6h.1c.5-.95 1.72-1.95 3.54-1.95C20.2 8.65 21 10.6 21 13.6V21h-4v-6.2c0-1.5-.03-3.45-2.1-3.45-2.1 0-2.42 1.64-2.42 3.35V21H9z" fill="#fff"/></svg></a>
             <a class="social-btn" href="https://www.instagram.com/its_jkd_here?igsh=MWFjMmN2NmZjcW52ZA==" aria-label="Jayesh Instagram" title="Instagram"><svg width="16" height="16" viewBox="0 0 24 24" fill="none"><path d="M12 2C7 2 4 6 4 10c0 4 3 7 8 7 5 0 8-3 8-7 0-4-3-8-8-8z" fill="#fff"/></svg></a>
@@ -530,7 +530,7 @@ body.dark .intro-screen {
 
         <!-- member 5 -->
         <div class="member" role="listitem" tabindex="0">
-          <h3>Ansh Chandravanshi</h3><p>Support Member</p>
+          <h3>Ansh Chandravanshi</h3><p>Support & Coordination</p>
           <div class="socials">
             <a class="social-btn" href="https://www.linkedin.com/in/ansh-c-87371b2a2?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" aria-label="Ansh LinkedIn" title="LinkedIn"><svg width="16" height="16" viewBox="0 0 24 24" fill="none"><path d="M4.98 3.5a2.5 2.5 0 11-.001 5.001A2.5 2.5 0 014.98 3.5zM3 9h4v12H3zM9 9h3.8v1.6h.1c.5-.95 1.72-1.95 3.54-1.95C20.2 8.65 21 10.6 21 13.6V21h-4v-6.2c0-1.5-.03-3.45-2.1-3.45-2.1 0-2.42 1.64-2.42 3.35V21H9z" fill="#fff"/></svg></a>
             <a class="social-btn" href="https://www.instagram.com/_enoughanshh_?igsh=aWVvdTVkejluMG42" aria-label="Ansh Instagram" title="Instagram"><svg width="16" height="16" viewBox="0 0 24 24" fill="none"><path d="M12 2C7 2 4 6 4 10c0 4 3 7 8 7 5 0 8-3 8-7 0-4-3-8-8-8z" fill="#fff"/></svg></a>
@@ -716,6 +716,7 @@ particlesJS("particles-js", {
 
 </body>
 </html>
+
 
 
 
