--- a/index.html
+++ b/index.html
@@ -428,12 +428,57 @@ footer {
   padding-bottom: 40px;
 }
 
+/* ---------- Loading Spinner ---------- */
+#loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(circle at center, #ffffff, #e3f2ff);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 999999;
+  transition: opacity 0.6s ease, visibility 0.6s ease;
+}
+
+body.dark #loader {
+  background: radial-gradient(circle at center, #0f1622, #1b2538);
+}
+
+.spinner {
+  width: 70px;
+  height: 70px;
+  border: 6px solid rgba(0, 123, 255, 0.2);
+  border-top-color: #007bff;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+#loader.hidden {
+  opacity: 0;
+  visibility: hidden;
+}
+
 
   </style>
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 
 </head>
 <body>
+
+  <!-- Loading Screen -->
+<div id="loader">
+  <div class="spinner"></div>
+</div>
+
 
   <div class="intro-screen">
   <div class="intro-content">
@@ -739,7 +784,6 @@ particlesJS("particles-js", {
 <script>
   // Disable scrolling during intro
   document.body.style.overflow = 'hidden';
-
   window.addEventListener('load', () => {
     const intro = document.querySelector('.intro-screen');
     setTimeout(() => {
@@ -749,10 +793,16 @@ particlesJS("particles-js", {
   });
 </script>
 
+<script>
+  // Hide loader when all resources (images, CSS, etc.) are loaded
+  window.addEventListener("load", function () {
+    const loader = document.getElementById("loader");
+    loader.classList.add("hidden");
+  });
+</script>
 
 </body>
 </html>
-
 
 
 
