--- a/index.html
+++ b/index.html
@@ -20,6 +20,47 @@
       --text-dark:#eef7ff;
       --muted:#6b7280;
     }
+
+    /* Preloader Styles */
+#preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000; /* black background */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  z-index: 9999;
+  transition: opacity 0.8s ease, visibility 0.8s ease;
+}
+
+#preloader.fade-out {
+  opacity: 0;
+  visibility: hidden;
+}
+
+#preloader .loader img {
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+#preloader p {
+  color: #fff;
+  font-size: 1.2rem;
+  margin-top: 15px;
+  font-family: 'Poppins', sans-serif;
+  letter-spacing: 1px;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
     
     /* Particle background setup */
 #particles-js {
@@ -110,6 +151,10 @@ body.dark #progressBar {
 
     .logo{ display:flex; gap:12px; align-items:center; perspective:700px; }
     .logo-img{ width:72px; height:auto; transition: transform .45s cubic-bezier(.2,.9,.3,1) }
+    /* Light/Dark logo switch */
+.logo-dark { display: none; }
+body.dark .logo-light { display: none; }
+body.dark .logo-dark { display: inline-block; }
     .logo:hover .logo-img{ transform: rotateY(12deg) rotateX(6deg) scale(1.03) }
     .logo-text{ font-family:'Trebuchet MS',sans-serif; font-size:1.6rem; color:var(--accent-1); font-weight:700 }
     body.dark .logo-text{ color:#9be9ff }
@@ -153,6 +198,9 @@ body.dark #progressBar {
       box-shadow: 0 30px 80px rgba(0,123,255,0.12);
       filter: drop-shadow(0 14px 40px rgba(0,123,255,0.06));
     }
+
+    
+
     body.dark .card{ background:#1f2430; color:var(--text-dark); box-shadow: 0 10px 30px rgba(0,0,0,.6) }
     body.dark .card:hover{ box-shadow: 0 36px 90px rgba(88,120,255,0.10); filter: drop-shadow(0 16px 48px rgba(88,120,255,0.06)) }
 
@@ -428,45 +476,6 @@ footer {
   padding-bottom: 40px;
 }
 
-/* ---------- Loading Spinner ---------- */
-#loader {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: radial-gradient(circle at center, #ffffff, #e3f2ff);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 999999;
-  transition: opacity 0.6s ease, visibility 0.6s ease;
-}
-
-body.dark #loader {
-  background: radial-gradient(circle at center, #0f1622, #1b2538);
-}
-
-.spinner {
-  width: 70px;
-  height: 70px;
-  border: 6px solid rgba(0, 123, 255, 0.2);
-  border-top-color: #007bff;
-  border-radius: 50%;
-  animation: spin 1s linear infinite;
-}
-
-@keyframes spin {
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-#loader.hidden {
-  opacity: 0;
-  visibility: hidden;
-}
-
 
   </style>
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
@@ -474,10 +483,14 @@ body.dark #loader {
 </head>
 <body>
 
+  <body>
   <!-- Loading Screen -->
-<div id="loader">
-  <div class="spinner"></div>
-</div>
+  <div id="preloader">
+    <div class="loader">
+      <img src="logo.png" alt="Loading..." />
+      <p>Loading AIspire...</p>
+    </div>
+  </div>
 
 
   <div class="intro-screen">
@@ -501,11 +514,12 @@ body.dark #loader {
   </div>
 
   <!-- header -->
-  <header>
-    <div class="logo" role="img" aria-label="AIspire logo">
-      <img src="logo.png" alt="AIspire Logo" class="logo-img">
-      <div class="logo-text">AIspire</div>
-    </div>
+  <div class="logo" role="img" aria-label="AIspire logo">
+  <img src="logo-light.png" alt="AIspire Logo" class="logo-img logo-light">
+  <img src="logo-dark.png" alt="AIspire Logo Dark" class="logo-img logo-dark">
+  <div class="logo-text">AIspire</div>
+  </div>
+
 
     <nav aria-label="Primary">
       <a href="#problem">Problem</a>
@@ -586,7 +600,7 @@ body.dark #loader {
         <div class="member" role="listitem" tabindex="0">
           <h3>Saad Ansari</h3><p>Developer</p>
           <div class="socials">
-            <a class="social-btn" href="https://www.linkedin.com/in/saad-ansari-a9a62332a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" aria-label="Saad LinkedIn" title="LinkedIn"><svg width="16" height="16" viewBox="0 0 24 24" fill="none"><path d="M4.98 3.5a2.5 2.5 0 11-.001 5.001A2.5 2.5 0 014.98 3.5zM3 9h4v12H3zM9 9h3.8v1.6h.1c.5-.95 1.72-1.95 3.54-1.95C20.2 8.65 21 10.6 21 13.6V21h-4v-6.2c0-1.5-.03-3.45-2.1-3.45-2.1 0-2.42 1.64-2.42 3.35V21H9z" fill="#fff"/></svg></a>
+            <a class="social-btn" href="#" aria-label="Saad LinkedIn" title="LinkedIn"><svg width="16" height="16" viewBox="0 0 24 24" fill="none"><path d="M4.98 3.5a2.5 2.5 0 11-.001 5.001A2.5 2.5 0 014.98 3.5zM3 9h4v12H3zM9 9h3.8v1.6h.1c.5-.95 1.72-1.95 3.54-1.95C20.2 8.65 21 10.6 21 13.6V21h-4v-6.2c0-1.5-.03-3.45-2.1-3.45-2.1 0-2.42 1.64-2.42 3.35V21H9z" fill="#fff"/></svg></a>
             <a class="social-btn" href="https://www.instagram.com/no.1_inocnt_boy_?igsh=bGJrb3FkaHJjMGU4" aria-label="Saad Instagram" title="Instagram"><svg width="16" height="16" viewBox="0 0 24 24" fill="none"><path d="M12 2C7 2 4 6 4 10c0 4 3 7 8 7 5 0 8-3 8-7 0-4-3-8-8-8z" fill="#fff"/></svg></a>
           </div>
         </div>
@@ -784,6 +798,7 @@ particlesJS("particles-js", {
 <script>
   // Disable scrolling during intro
   document.body.style.overflow = 'hidden';
+
   window.addEventListener('load', () => {
     const intro = document.querySelector('.intro-screen');
     setTimeout(() => {
@@ -794,15 +809,14 @@ particlesJS("particles-js", {
 </script>
 
 <script>
-  // Hide loader when all resources (images, CSS, etc.) are loaded
-  window.addEventListener("load", function () {
-    const loader = document.getElementById("loader");
-    loader.classList.add("hidden");
+  window.addEventListener("load", function() {
+    const preloader = document.getElementById("preloader");
+    setTimeout(() => {
+      preloader.classList.add("fade-out");
+    }, 300); // small delay before fading out
   });
 </script>
 
+
 </body>
 </html>
-
-
-
