--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@ footer {
    <section class="download-section" aria-labelledby="downloadTitle">
   <h2 id="downloadTitle" class="center">Get AIspire</h2>
   <div class="center">
-    <a href="AIspire.pdf" download class="download-btn">Download AIspire</a>
+    <a href="AIspire_Setup.exe" download class="download-btn">Download AIspire</a>
   </div>
 </section>
 
@@ -767,3 +767,4 @@ particlesJS("particles-js", {
 
 </body>
 </html>
+
