--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@ footer {
               <!-- LinkedIn SVG -->
               <svg width="16" height="16" viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M4.98 3.5a2.5 2.5 0 11-.001 5.001A2.5 2.5 0 014.98 3.5zM3 9h4v12H3zM9 9h3.8v1.6h.1c.5-.95 1.72-1.95 3.54-1.95C20.2 8.65 21 10.6 21 13.6V21h-4v-6.2c0-1.5-.03-3.45-2.1-3.45-2.1 0-2.42 1.64-2.42 3.35V21H9z" fill="#fff"/></svg>
             </a>
-            <a class="social-btn" href="https://www.instagram.com/sonisumit06?igsh=aWk3ZHZ5czEzbngw" target="_blank" aria-label="Sumit Instagram" title="Instagram">
+            <a class="social-btn" href="https://www.instagram.com/honeyakasumit/?hl=en" target="_blank" aria-label="Sumit Instagram" title="Instagram">
               <!-- GitHub SVG -->
               <svg width="16" height="16" viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M12 2C7 2 4 6 4 10c0 4 3 7 8 7 5 0 8-3 8-7 0-4-3-8-8-8z" fill="#fff"/></svg>
             </a>
@@ -767,5 +767,6 @@ particlesJS("particles-js", {
 
 </body>
 </html>
+
 
 
