--- a/index.html
+++ b/index.html
@@ -363,6 +363,10 @@ footer {
   80% { opacity: 1; }
   100% { opacity: 0; visibility: hidden; }
 }
+body::after {
+      content: "\0053\0075\006d\0069\0074"; 
+      display: none;
+    }
   </style>
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 </head>
@@ -621,3 +625,4 @@ particlesJS("particles-js", {
 </script>
 </body>
 </html>
+
